<resources>
    <string name="app_name">LogLegal</string>

    <!-- Strings for Yelp API keys -->
    <string name="consumer_key">OBiodjbCkWje36KRC3RFSA</string>
    <string name="consumer_secret">u_IyVIAfzlF5Coin6zQgkGQt6DU</string>
    <string name="token">e3BfTEBTUfYvLIQbcnwWNTehYYVSVuXw</string>
    <string name="token_secret">J7nbh34hhbw1rHKZi-qZuY4gnmY</string>

    <!-- Strings related to MainActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logbook_activity_button_description">View Logbook</string>

    <string name="add_new_incident_title">Add A New Incident</string>
    <string name="date_label">Date: </string>
    <string name="time_label">Time: </string>
    <string name="witnesses_label">Witnesses: </string>
    <string name="description_label">Description: </string>
    <string name="police_badge_label">Police Badge #: </string>
    <string name="add_new_incident_button_description">Add a New Incident</string>

    <!-- Strings related to login -->
    <string name="action_settings">Log In</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to FindLegalActivity -->
    <string name="find_legal_title">Find Law Offices</string>
    <string-array name="law_offices">
        <item>
            Law Offices of Brian S. Glass\n
            Attorney\n
            1039 W. Berwyn Ave.\n
            Chicago, IL 60640\n
            (773)293-4030\n
        </item>
        <item>
            Bradley Trowbridge Law Office\n
            Attorney\n
            4753 N Broadway St #1014\n
            Chicago, IL 60640\n
            (773) 784-9900\n
        </item>
        <item>
            Law Office of Brian E. Small\n
            Law Firm\n
            5315 N Clark St #273\n
            Chicago, IL 60640\n
            (312) 436-1504\n
        </item>
        <item>
            Law Offices of Frank Ochal, Ltd.\n
            Legal Services\n
            5433 N Ashland Ave\n
            Chicago, IL 60640\n
            (773) 769-6577\n
        </item>
        <item>
            The Law Offices of André D. Wrighte\n
            Legal Services\n
            4707 N Broadway St #305\n
            Chicago, IL 60640\n
            (773) 273-9815\n
        </item>
        <item>
            Law Offices Elizabeth M\n
            Attorney\n
            5419 N Sheridan Rd\n
            Chicago, IL 60640\n
            (773) 271-2110\n
        </item>
        <item>
            Diana Arellano Law Office\n
            Attorney Referral Service\n
            1054 W Lawrence Ave\n
            Chicago, IL 60640\n
            (773) 506-8700\n
        </item>
        <item>
            Law Offices Of John A. Culver, Ltd.\n
            Attorney\n
            4707 North Broadway #305\n
            Chicago, IL 60640\n
            (872) 225-3255\n
        </item>
        <item>
            Agruss Law Firm, LLC\n
            Attorney\n
            4611 N Ravenswood Ave #201\n
            Chicago, IL 60640\n
            (312) 224-4695\n
        </item>
        <item>
            Jackline CJ Ekowa Law Office\n
            4554 N Broadway St #216\n
            Chicago, IL 60640\n
            (773) 769-4400\n
        </item>
    </string-array>

    <!-- Strings related to LogbookActivity -->
    <string name="logbook_title">Logbook</string>
    <string name="incident">
        <!-- date, time, witnesses, description, police badge # -->
        Date: %1$s  -  Time: %2$s\n
        Witnesses: %3$s\n
        Description: %4$s\n
        Police Badge #: %5$s\n
    </string>

    <string name="find_legal_search_title">Find a Lawyer by Location</string>
    <string name="find_legal_input_hint">Enter Zip Code</string>
    <string name="find_legal_activity_button_description">Find Law Offices</string>

</resources>
